--- a/BSMM2/BSMM2.UWP/BSMM2.UWP.csproj
+++ b/BSMM2/BSMM2.UWP/BSMM2.UWP.csproj
@@ -147,6 +147,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="PCLStorage">
+      <Version>1.0.2</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.1.0.673156" />
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.8" />
   </ItemGroup>
