--- a/BSMM2Test/BSMM2Test.csproj
+++ b/BSMM2Test/BSMM2Test.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.3.2" />
     <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />
+    <PackageReference Include="PCLStorage" Version="1.0.2" />
   </ItemGroup>
 
   <ItemGroup>
