--- a/BSMM2/BSMM2.iOS/BSMM2.iOS.csproj
+++ b/BSMM2/BSMM2.iOS/BSMM2.iOS.csproj
@@ -140,6 +140,9 @@
     <PackageReference Include="PCLStorage">
       <Version>1.0.2</Version>
     </PackageReference>
+    <PackageReference Include="Prism.Core">
+      <Version>7.2.0.1367</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Essentials">
       <Version>1.2.0</Version>
     </PackageReference>
