--- a/BSMM2/BSMM2/BSMM2.csproj
+++ b/BSMM2/BSMM2/BSMM2.csproj
@@ -34,6 +34,9 @@
     <Compile Update="Views\AddPlayerPage.xaml.cs">
       <DependentUpon>AddPlayerPage.xaml</DependentUpon>
     </Compile>
+    <Compile Update="Views\RulePage.xaml.cs">
+      <DependentUpon>RulePage.xaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\GamesPage.xaml.cs">
       <DependentUpon>GamesPage.xaml</DependentUpon>
     </Compile>
