--- a/BSMM2/BSMM2/BSMM2.csproj
+++ b/BSMM2/BSMM2/BSMM2.csproj
@@ -40,6 +40,9 @@
     <Compile Update="Views\RoundLogPage.xaml.cs">
       <DependentUpon>RoundLogPage.xaml</DependentUpon>
     </Compile>
+    <Compile Update="Views\JsonPage.xaml.cs">
+      <DependentUpon>JsonPage.xaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\SettingsPage.xaml.cs">
       <DependentUpon>SettingsPage.xaml</DependentUpon>
     </Compile>
