Refactoring removed obsoleted files

--- a/BSMM2/BSMM2/BSMM2.csproj
+++ b/BSMM2/BSMM2/BSMM2.csproj
@@ -79,6 +79,7 @@
 
   <ItemGroup>
     <Folder Include="Properties\" />
+    <Folder Include="Services\" />
     <Folder Include="ViewModels\Matches\" />
     <Folder Include="Views\Matches\" />
   </ItemGroup>
