--- a/BSMM2/BSMM2/BSMM2.csproj
+++ b/BSMM2/BSMM2/BSMM2.csproj
@@ -23,6 +23,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Models\Matches\MultiMatch\ThreeGameMatch\ThreeGameMatchPage.xaml.cs">
+      <DependentUpon>ThreeGameMatchPage.xaml</DependentUpon>
+    </Compile>
     <Compile Update="Models\Matches\SingleMatch\SingleMatchPage.xaml.cs">
       <DependentUpon>SingleMatchPage.xaml</DependentUpon>
     </Compile>
